# personal-chef

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  run.py  server.py
src/agent/: emotion_analyzer.py  graph.py  state.py
src/api/: auth_models.py  auth_routes.py  chat_history_routes.py  emotion_models.py  emotion_routes.py  history_models.py  history_routes.py  models.py  routes.py  user_models.py  user_routes.py
src/auth/: security.py
src/db/: crud.py  database.py  models.py
src/email/: mailer.py
src/tools/: search.py
src/utils/: multimodal.py
